k8s/dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imager-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.org/client-max-body-size: "10m"
spec:
  rules:
    - host: <MY-DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imager
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: imager
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 9000
  selector:
    app: imager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imager
  namespace: dev
spec:
  selector:
    matchLabels:
      app: imager
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: imager
    spec:
      containers:
        - name: imager
          image: <IMAGE>
          ports:
            - name: app-port
              containerPort: 9000
          livenessProbe:
            httpGet:
              path: /
              port: app-port
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: app-port
            initialDelaySeconds: 3
            periodSeconds: 3
